removed dependency on libgdi since it's not really needed
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5122 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/linux/ifolder3.spec.in
+++ b/ifolder/package/linux/ifolder3.spec.in
@@ -39,7 +39,7 @@ BuildRoot    : %{_tmppath}/%{name}-%{version}
 
 Requires     : simias >= 1.1
 Requires     : gtk-sharp >= 1.0.9
-Requires     : libgdiplus >= 1.1.7
+#Requires     : libgdiplus >= 1.1.7
 Obsoletes    : %{name} <= %{version}
 
 #=============================================================================
