moved from ifolders: to ifolder:
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5128 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gnome-vfs-ifolder/src/Makefile.am
+++ b/gnome-vfs-ifolder/src/Makefile.am
@@ -6,18 +6,18 @@ INCLUDES = \
 
 GPREFIX=`pkg-config --variable=prefix gnome-vfs-module-2.0`
 
-EXTRA_DIST = ifolders.conf
+EXTRA_DIST = ifolder.conf
 
-mod_LTLIBRARIES = libifolders.la
+mod_LTLIBRARIES = libifolder.la
 
-libifolders_la_SOURCES = ifolders-method.c
-libifolders_la_LDFLAGS = \
+libifolder_la_SOURCES = ifolder-method.c
+libifolder_la_LDFLAGS = \
 	$(GLIB_LIBS) \
 	$(GNOME_VFS_MODULE_LIBS) \
 	$(SIMIAS_CLIENT_C_LIBS) \
 	$(IFOLDER_C_LIBS)
 moddir = $(GPREFIX)/lib/gnome-vfs-2.0/modules
 
-conf_DATA = ifolders.conf
+conf_DATA = ifolder.conf
 confdir = /etc$(GPREFIX)/gnome-vfs-2.0/modules
 
