Modified the simias.spec.in and supporting build files to create simias-simple-server.rpm.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5130 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/Makefile.am
+++ b/package/linux/Makefile.am
@@ -26,6 +26,8 @@ RELEASE = 1
 RPM_FILE    = $(PACKAGE)-$(VERSION)-$(RELEASE).*.rpm
 SRPM_FILE   = $(PACKAGE)-$(VERSION)-$(RELEASE).src.rpm
 
+SERVER_RPM_FILE	= $(PACKAGE)-simple-server-$(VERSION)-$(RELEASE).*.rpm
+
 .PHONY: simias-dist
 
 all: simias.spec simias-dist clean
@@ -45,6 +47,7 @@ all: simias.spec simias-dist clean
 		CMD='cp -f $(RPM_FILE) $(SRPM_FILE) "$(INSTALL_PKGS)"'; \
 		echo $$CMD; \
 		eval $$CMD
+	cp RPM/RPMS/*/$(SERVER_RPM_FILE) .
 
 simias-dist:
 	cd $(top_srcdir); make dist
