--- a/other/SimpleServer/Makefile.am
+++ b/other/SimpleServer/Makefile.am
@@ -9,7 +9,7 @@ SimpleServer_FLAGS = $(CSC_LIBFLAG)
 SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll
 SimpleServer_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient $(DESTDIR)$(webbindir)
 
-EXTRA_DIST = win.web.config mono.web.config DomainService.asmx $(SimpleServer_CSFILES)
+EXTRA_DIST = win.web.config mono.web.config DomainService.asmx $(SimpleServer_CSFILES) SimpleServer.xml simias-server-bootstrap.config.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -19,7 +19,17 @@ endif
 
 NUNIT_TESTS := Simias.SimpleServer.dll
 
-all: $(NUNIT_TESTS)
+if WINDOWS
+	FIXED_WEBDIR := $(shell cygpath --mixed $(webdir))
+else
+	FIXED_WEBDIR := $(webdir)
+endif
+
+simias-server-bootstrap.config: simias-server-bootstrap.config.in
+	sed -e 's,@_webdir_@,$(FIXED_WEBDIR),g' -e 's,@_StoreProviderAssembly_@,@StoreProviderAssembly@,g' -e 's,@_StoreProviderType_@,@StoreProviderType@,g' $< > simias-server-bootstrap.config
+	chmod +x $@
+
+all: $(NUNIT_TESTS) simias-server-bootstrap.config
 
 Simias.SimpleServer.dll: $(SimpleServer_CSFILES) $(SimpleServer_RESOURCES)
 	$(CSC) /out:$@ $(CSCFLAGS) $(SimpleServer_FLAGS) $(SimpleServer_LIBS:%=/r:%) $(SimpleServer_LIBPATH:%=/lib:%) $(SimpleServer_RESOURCES:%=$(ICON_FLAG)%) $(SimpleServer_CSFILES_CSC) $(DOC_FILE_CMD)
@@ -33,12 +43,13 @@ endif
 install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) SimpleServer.xml $(DESTDIR)$(sysconfdir)
+	$(INSTALL_PROGRAM) simias-server-bootstrap.config $(DESTDIR)$(sysconfdir)
 	$(INSTALL_PROGRAM) DomainService.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) $(NUNIT_TESTS) $(DEBUG_CHECK_FILES) $(DESTDIR)$(webbindir)
 if WINDOWS
 	$(INSTALL_PROGRAM) win.web.config $(DESTDIR)$(webdir)/web.config
 else
-	$(INSTALL_PROGRAM) mono.web.config $(DESTDIR)$(webdir)/web.config
+	$(INSTALL_PROGRAM) mono.web.config $(DESTDIR)$(webdir)/server.web.config
 endif	
 	
 
