--- a/simias/package/linux/Makefile.am
+++ b/simias/package/linux/Makefile.am
@@ -26,6 +26,8 @@ RELEASE = 1
 RPM_FILE    = $(PACKAGE)-$(VERSION)-$(RELEASE).*.rpm
 SRPM_FILE   = $(PACKAGE)-$(VERSION)-$(RELEASE).src.rpm
 
+SERVER_RPM_FILE	= $(PACKAGE)-simple-server-$(VERSION)-$(RELEASE).*.rpm
+
 .PHONY: simias-dist
 
 all: simias.spec simias-dist clean
@@ -45,6 +47,7 @@ all: simias.spec simias-dist clean
 		CMD='cp -f $(RPM_FILE) $(SRPM_FILE) "$(INSTALL_PKGS)"'; \
 		echo $$CMD; \
 		eval $$CMD
+	cp RPM/RPMS/*/$(SERVER_RPM_FILE) .
 
 simias-dist:
 	cd $(top_srcdir); make dist
