Modified the simias.spec.in and supporting build files to create simias-simple-server.rpm.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5131 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
-SUBDIRS = src
+SUBDIRS = src other
 
-DIST_SUBDIRS = $(SUBDIRS) doc package test other
+DIST_SUBDIRS = $(SUBDIRS) doc package test
 
 PROJECT_FILES = $(srcdir)/Simias.sln $(srcdir)/Simias.csproj
 
