Rolled back some changes that were inadvertently checked-in Friday that were meant for a different area.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5139 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/simias-server-bootstrap.config.in
+++ b/other/SimpleServer/simias-server-bootstrap.config.in
@@ -1,14 +1,11 @@
 <configuration>
   <section name="Domain">
-    <setting name="simias-server-name" value="Simias Server" />
-    <setting name="simias-server-description" value="Default Simias Simple Server" />
-    <setting name="simias-server-admin" value="ServerAdmin" />
-    <setting name="simias-server-admin-password" value="root" />
+    <setting name="SimpleServerName" value="Simias SimpleServer" />
   </section>
   <section name="ServiceManager">
       <setting name="WebServicePath" value="@_webdir_@" />
       <setting name="Services">
-      <Service name="Simias Simple Server" assembly="Simias.Server.dll" enabled="True" type="Thread" class="Simias.Server.Service" />
+      <Service name="Simias Simple Server" assembly="Simias.SimpleServer.dll" enabled="True" type="Thread" class="Simias.SimpleServer.Service" />
       <Service name="Simias Change Log Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Storage.ChangeLog" />
     </setting>
   </section>
