--- a/simias-server/src/Makefile.am
+++ b/simias-server/src/Makefile.am
@@ -9,7 +9,11 @@ SimpleServer_FLAGS = $(CSC_LIBFLAG)
 SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll
 SimpleServer_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient $(DESTDIR)$(webbindir)
 
-EXTRA_DIST = win.web.config mono.web.config DomainService.asmx Register.css Register.aspx $(SimpleServer_CSFILES)
+EXTRA_DIST = ../web-config/win.web.config ../web-config/mono.web.config ../simias-server-boostrap.config.in DomainService.asmx Register.css Register.aspx $(SimpleServer_CSFILES)
+
+simias-server-bootstrap.config: ./simias-server-bootstrap.config.in
+	sed -e 's,@_webdir_@,$(FIXED_WEBDIR),g' -e 's,@_StoreProviderAssembly_@,@StoreProviderAssembly@,g' -e 's,@_StoreProviderType_@,@StoreProviderType@,g' $< > ./simias-server-bootstrap.config
+	chmod +x $@
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -17,7 +21,7 @@ DOC_FILE_CMD = /doc:$(DOC_FILE)
 DOC_FILE_CLEAN = *.doc.xml
 endif
 
-NUNIT_TESTS := Simias.Server.dll
+NUNIT_TESTS := Simias.Server.dll simias-server-bootstrap.config
 
 all: $(NUNIT_TESTS)
 
@@ -32,21 +36,23 @@ endif
 
 install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
-	$(INSTALL_PROGRAM) SimiasServer.xml $(DESTDIR)$(sysconfdir)
+	$(INSTALL_PROGRAM) ./simias-server-bootstrap.config $(DESTDIR)$(sysconfdir)
 	$(INSTALL_PROGRAM) DomainService.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
-	$(INSTALL_PROGRAM) Register.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
+	$(INSTALL_PROGRAM) Register.aspx $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) Register.css $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) $(NUNIT_TESTS) $(DEBUG_CHECK_FILES) $(DESTDIR)$(webbindir)
+	
 if WINDOWS
-	$(INSTALL_PROGRAM) win.web.config $(DESTDIR)$(webdir)/web.config
+	$(INSTALL_PROGRAM) ../web-config/win.web.config $(DESTDIR)$(webdir)/web.config
 else
-	$(INSTALL_PROGRAM) mono.web.config $(DESTDIR)$(webdir)/web.config
+	$(INSTALL_PROGRAM) ../web-config/mono.web.config $(DESTDIR)$(webdir)/web.config
 endif	
 	
 
 uninstall-local:
 	cd $(DESTDIR)$(webbindir); $(NUNIT) $(NUNIT_FLAGS) /xml:SimiasTests.test.xml $(NUNIT_TESTS)
-	cd $(DESTDIR)$(webdir); rm -f  web.config DomainService.asmx Register.asmx Register.css
+	cd $(DESTDIR)$(webdir); rm -f  web.config DomainService.asmx Register.aspx Register.css	
+	cd $(DESTDIR)$(sysconfdir); rm -f simias-server-bootstrap.config
 
 installcheck-local: install
 		
