--- a/bonjour/package/linux/simias-bonjour.spec.in
+++ b/bonjour/package/linux/simias-bonjour.spec.in
@@ -33,10 +33,11 @@ Source       : %{name}-%{version}.tar.gz
 URL          : http://forge.novell.com/modules/xfmod/project/?ifolder
 #Distribution : 
 Vendor       : www.ifolder.com
-Packager     : <unknown>
+Packager     : Calvin Gaisford <cgaisford@novell.com>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
 Requires     : simias >= 1.1
+Requires	 : mDNSResponder
 PreReq		 : nscd
 Obsoletes    : %{name} <= %{version}
 
