--- a/simias-server/web-config/win.web.config
+++ b/simias-server/web-config/win.web.config
@@ -48,6 +48,7 @@
 		<add key="MonoServerDefaultIndexFiles" value="index.aspx, Default.aspx, default.aspx, index.html, index.htm" />
 		<add key="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
 		<add key="SimiasRequireSSL" value="no" />
+		<add key="Enterprise" value="True" />
     </appSettings>
 	
 </configuration>
