excluded Register.aspx from requiring authentication
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5147 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/web-config/win.web.config
+++ b/simias-server/web-config/win.web.config
@@ -46,7 +46,7 @@
 
     <appSettings>
 		<add key="MonoServerDefaultIndexFiles" value="index.aspx, Default.aspx, default.aspx, index.html, index.htm" />
-		<add key="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
+		<add key="SimiasAuthNotRequired" value="Register.aspx, Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
 		<add key="SimiasRequireSSL" value="no" />
 		<add key="Enterprise" value="True" />
     </appSettings>
