ugly version with users
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5150 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gnome-vfs-ifolder/configure.in
+++ b/gnome-vfs-ifolder/configure.in
@@ -63,6 +63,7 @@ AC_OUTPUT([
 	Makefile
 	gnome-vfs-ifolder.pc
 	src/Makefile
+	icons/Makefile
 	package/Makefile
 	package/gnome-vfs-ifolder.spec
 ])
