changes so user's passwords are hashed before they are stored in the Simias database
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5153 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/SimiasServer.csproj
+++ b/simias-server/SimiasServer.csproj
@@ -139,6 +139,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\DomainService.asmx.resx"
+                    DependentUpon = "DomainService.asmx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "src\ProvisionInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
