1. Renamed Simias.dll to SimiasLib.dll
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5185 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/Simias.csproj
+++ b/simias/Simias.csproj
@@ -9,7 +9,7 @@
             <Settings
                 ApplicationIcon = ""
                 AssemblyKeyContainerName = ""
-                AssemblyName = "Simias"
+                AssemblyName = "SimiasLib"
                 AssemblyOriginatorKeyFile = ""
                 DefaultClientScript = "JScript"
                 DefaultHTMLPageLayout = "Grid"
@@ -538,7 +538,7 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "src\Simias.dll\AssemblyInfo.cs"
+                    RelPath = "src\SimiasLib.dll\AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
