--- a/simias/src/POBoxWS/Makefile.am
+++ b/simias/src/POBoxWS/Makefile.am
@@ -6,8 +6,8 @@ POBoxWS_CSFILES_CSC := $(subst /,$(SEP),$(POBoxWS_CSFILES))
 POBoxWS_INCLUDES =
 POBoxWS_RESOURCES =
 POBoxWS_FLAGS = $(CSC_LIBFLAG)
-POBoxWS_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll Simias.dll
-POBoxWS_LIBPATH = ../SimiasClient ../Simias.dll
+POBoxWS_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll SimiasLib.dll
+POBoxWS_LIBPATH = ../SimiasClient ../SimiasLib.dll
 
 EXTRA_DIST = POService.asmx $(POBoxWS_CSFILES) AssemblyInfo.cs.in
 
