--- a/simias/src/SqliteProvider/Makefile.am
+++ b/simias/src/SqliteProvider/Makefile.am
@@ -6,8 +6,8 @@ SqliteProvider_CSFILES_CSC := $(subst /,$(SEP),$(SqliteProvider_CSFILES))
 SqliteProvider_INCLUDES =
 SqliteProvider_RESOURCES =
 SqliteProvider_FLAGS = $(CSC_LIBFLAG)
-SqliteProvider_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Runtime.Remoting.dll SimiasClient.dll Simias.dll SqliteWrapper.dll
-SqliteProvider_LIBPATH = ../Simias.dll ../SimiasClient
+SqliteProvider_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Runtime.Remoting.dll SimiasClient.dll SimiasLib.dll SqliteWrapper.dll
+SqliteProvider_LIBPATH = ../SimiasLib.dll ../SimiasClient
 
 SqliteWrapper_CSFILES := $(srcdir)/SqliteWrapper/AssemblyInfo.cs $(srcdir)/SqliteWrapper/SqliteCommand.cs $(srcdir)/SqliteWrapper/SqliteConnection.cs $(srcdir)/SqliteWrapper/SqliteDataReader.cs $(srcdir)/SqliteWrapper/SqliteParameter.cs $(srcdir)/SqliteWrapper/SqliteParameterCollection.cs $(srcdir)/SqliteWrapper/SqliteTransaction.cs
 SqliteWrapper_CSFILES_CSC := $(subst /,$(SEP),$(SqliteWrapper_CSFILES))
