--- a/simias/src/WebService/Makefile.am
+++ b/simias/src/WebService/Makefile.am
@@ -6,8 +6,8 @@ SimiasWebService_CSFILES_CSC := $(subst /,$(SEP),$(SimiasWebService_CSFILES))
 SimiasWebService_INCLUDES =
 SimiasWebService_RESOURCES =
 SimiasWebService_FLAGS = $(CSC_LIBFLAG)
-SimiasWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll Simias.dll Novell.Security.ClientPasswordManager.NetCredential.dll
-SimiasWebService_LIBPATH = ../SimiasClient ../Simias.dll $(NOVELL_SECURITY_DIR)
+SimiasWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll SimiasLib.dll Novell.Security.ClientPasswordManager.NetCredential.dll
+SimiasWebService_LIBPATH = ../SimiasClient ../SimiasLib.dll $(NOVELL_SECURITY_DIR)
 
 EXTRA_DIST = win.web.config mono.web.config Global.asax Simias.asmx Simias.wsdl $(SimiasWebService_CSFILES) AssemblyInfo.cs.in
 
