--- a/simias/test/Encryption/Encryption.csproj
+++ b/simias/test/Encryption/Encryption.csproj
@@ -87,7 +87,7 @@
                 <Reference
                     Name = "Simias"
                     AssemblyName = "Simias"
-                    HintPath = "..\..\stage\web\bin\Simias.dll"
+                    HintPath = "..\..\stage\web\bin\SimiasLib.dll"
                 />
                 <Reference
                     Name = "nunit.core"
