1. Changes for SimiasStandAlone services.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5193 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/Makefile.am
+++ b/simias/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = src other
 
 DIST_SUBDIRS = $(SUBDIRS) doc package test
 
-PROJECT_FILES = $(srcdir)/Simias.sln $(srcdir)/Simias.csproj
+PROJECT_FILES = $(srcdir)/SimiasLib.sln $(srcdir)/SimiasLib.csproj
 
 EXTRA_DIST = tools/gsoap external/NS external/flaim external/log4net $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
 
