--- a/simias/src/SimiasApp/Makefile.am
+++ b/simias/src/SimiasApp/Makefile.am
@@ -1,15 +1,15 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH)
 
-SimiasApp_CSFILES = $(srcdir)/AssemblyInfo.cs $(srcdir)/server.cs $(srcdir)/ApplicationServer.cs $(srcdir)/IApplicationHost.cs $(srcdir)/IWebSource.cs $(srcdir)/Tracing.cs $(srcdir)/XSPApplicationHost.cs $(srcdir)/BaseApplicationHost.cs $(srcdir)/BaseRequestBroker.cs $(srcdir)/MonoWorkerRequest.cs $(srcdir)/XSPWorkerRequest.cs $(srcdir)/LingeringNetworkStream.cs $(srcdir)/InitialWorkerRequest.cs
-SimiasApp_CSFILES_CSC := $(subst /,$(SEP),$(SimiasApp_CSFILES))
-SimiasApp_INCLUDES =
-SimiasApp_RESOURCES = $(srcdir)/App$(ICON_EXT)
-SimiasApp_FLAGS = $(CSC_EXEFLAG)
-SimiasApp_LIBS = System.dll System.Data.dll $(SYSTEM_XML) SimiasClient.dll SimiasLib.dll Simias.Web.dll System.Web.dll
-SimiasApp_LIBPATH = $(NUNIT_LIBPATH) $(LOG4NET_DIR) ../SimiasClient ../SimiasLib.dll ../WebService
+Simias_CSFILES = $(srcdir)/AssemblyInfo.cs $(srcdir)/Simias.cs $(srcdir)/server.cs $(srcdir)/ApplicationServer.cs $(srcdir)/IApplicationHost.cs $(srcdir)/IWebSource.cs $(srcdir)/Tracing.cs $(srcdir)/XSPApplicationHost.cs $(srcdir)/BaseApplicationHost.cs $(srcdir)/BaseRequestBroker.cs $(srcdir)/MonoWorkerRequest.cs $(srcdir)/XSPWorkerRequest.cs $(srcdir)/LingeringNetworkStream.cs $(srcdir)/InitialWorkerRequest.cs
+Simias_CSFILES_CSC := $(subst /,$(SEP),$(Simias_CSFILES))
+Simias_INCLUDES =
+Simias_RESOURCES = $(srcdir)/App$(ICON_EXT)
+Simias_FLAGS = $(CSC_EXEFLAG)
+Simias_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll SimiasClient.dll
+Simias_LIBPATH = ../SimiasClient
 
-EXTRA_DIST = App.ico $(SimiasApp_CSFILES) AssemblyInfo.cs.in
+EXTRA_DIST = App.ico $(Simias_CSFILES) AssemblyInfo.cs.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -17,10 +17,10 @@ DOC_FILE_CMD = /doc:$(DOC_FILE)
 DOC_FILE_CLEAN = *.doc.xml
 endif
 
-all: SimiasApp.exe
+all: Simias.exe
 
-SimiasApp.exe: AssemblyInfo.cs $(SimiasApp_CSFILES) $(SimiasApp_RESOURCES)
-	$(CSC) /out:$@ $(CSCFLAGS) $(SimiasApp_FLAGS) $(SIMIAS_LIBS) $(SimiasApp_LIBS:%=/r:%) $(SimiasApp_LIBPATH:%=/lib:%) $(SimiasApp_RESOURCES:%=$(ICON_FLAG)%) $(SimiasApp_CSFILES_CSC) $(DOC_FILE_CMD)
+Simias.exe: AssemblyInfo.cs $(Simias_CSFILES) $(Simias_RESOURCES)
+	$(CSC) /out:$@ $(CSCFLAGS) $(Simias_FLAGS) $(SIMIAS_LIBS) $(Simias_LIBS:%=/r:%) $(Simias_LIBPATH:%=/lib:%) $(Simias_RESOURCES:%=$(ICON_FLAG)%) $(Simias_CSFILES_CSC) $(DOC_FILE_CMD)
 
 AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in Makefile
 	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
@@ -28,21 +28,21 @@ AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in Makefile
 
 if DEBUG
 if WINDOWS
-DEBUG_FILES = SimiasApp.pdb
+DEBUG_FILES = Simias.pdb
 endif
 endif
 
-install-exec-local: SimiasApp.exe $(DATA_FILES)
+install-exec-local: Simias.exe $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(bindir)
-	$(INSTALL_PROGRAM) SimiasApp.exe $(DEBUG_FILES) $(DESTDIR)$(webbindir)
+	$(INSTALL_PROGRAM) Simias.exe $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 
 	
 uninstall-local:
-	cd $(DESTDIR)$(webbindir); rm -f SimiasApp.exe $(DEBUG_FILES)
+	cd $(DESTDIR)$(webbindir); rm -f Simias.exe $(DEBUG_FILES)
 
 installcheck-local: install
 	
-CLEAN_FILES = SimiasApp.exe $(DOC_FILE_CLEAN) AssemblyInfo.cs
+CLEAN_FILES = Simias.exe $(DOC_FILE_CLEAN) AssemblyInfo.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
