--- a/simias/other/SimpleServer/win.web.config
+++ b/simias/other/SimpleServer/win.web.config
@@ -32,7 +32,7 @@
 			<add name="OutputCache" type="System.Web.Caching.OutputCacheModule"/>
 			<add name="Session" type="System.Web.SessionState.SessionStateModule"/>
 			<add name="ErrorHandlerModule" type="System.Web.Mobile.ErrorHandlerModule, System.Web.Mobile, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
-			<add name="AuthenticationModule" type="Simias.Security.Web.AuthenticationModule, Simias"/>
+			<add name="AuthenticationModule" type="Simias.Security.Web.AuthenticationModule, SimiasLib"/>
 		</httpModules>
     </system.web>
 
