--- a/simias/src/WebService/SimiasWebService.csproj
+++ b/simias/src/WebService/SimiasWebService.csproj
@@ -96,7 +96,7 @@
                 />
                 <Reference
                     Name = "Simias"
-                    AssemblyName = "Simias"
+                    AssemblyName = "SimiasLib"
                     HintPath = "..\..\stage\web\bin\SimiasLib.dll"
                 />
                 <Reference
