--- a/simias/src/WebService/mono.web.config
+++ b/simias/src/WebService/mono.web.config
@@ -28,7 +28,7 @@
 		</authentication>
     	
 		<httpModules>
-			<add name="AuthenticationModule" type="Simias.Security.Web.AuthenticationModule, Simias"/>
+			<add name="AuthenticationModule" type="Simias.Security.Web.AuthenticationModule, SimiasLib"/>
 		</httpModules>
     </system.web>
 
