Fixed a make install problem of the old symbolic link hanging around.  The fix now removes the link if it exists so that it will be recreated.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5194 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
@@ -91,6 +91,9 @@ libFlaimWrapper_la_LDFLAGS = -L"../../../external/flaim/lxx86/gcc3/release" -lfl
 
 install-exec-local: libFlaimWrapper.la
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
+	if test -e $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT); then \
+		rm $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT); \
+	fi;
 	ln -s $(DESTDIR)$(libdir)/libFlaimWrapper$(SHARED_LIB_EXT) $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT)
 
 uninstall-local:
@@ -105,6 +108,9 @@ libFlaimWrapper_la_LDFLAGS = -L"../../../external/flaim/macosx/release" -lflm
 
 install-exec-local: libFlaimWrapper.la
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
+	if test -e $(DESTDIR)$(webbindir)/FlaimWrapper; then \
+		rm $(DESTDIR)$(webbindir)/FlaimWrapper; \
+	fi;
 	ln -s $(DESTDIR)$(libdir)/libFlaimWrapper.dylib $(DESTDIR)$(webbindir)/FlaimWrapper
 
 uninstall-local:
